--- a/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-xxx/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-xxx/pom.xml
@@ -25,6 +25,13 @@
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>2.9.2</version>
             </dependency>
+
+            <!--分页工具-->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>1.2.10</version>
+            </dependency>
         </dependencies>
 
 
