--- a/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-xxx/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-xxx/pom.xml
@@ -32,6 +32,10 @@
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>1.2.10</version>
             </dependency>
+            <dependency>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+            </dependency>
         </dependencies>
 
 
