--- a/mingrui-shop-parent/mingrui-shop-service-api/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service-api/pom.xml
@@ -15,6 +15,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>mingrui-shop-service-api-xxx</module>
+        <module>mingrui-shop-service-api-search1</module>
     </modules>
 
     <dependencies>
@@ -57,6 +58,18 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.10</version>
         </dependency>
+
+<!--        &lt;!&ndash;2.3版本之后web删除了验证插件&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-validation</artifactId>-->
+<!--        </dependency>-->
+        <!--feign get请求需要使用@SpringQueryMap注解-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
     </dependencies>
 
 
