--- a/mingrui-shop-parent/pom.xml
+++ b/mingrui-shop-parent/pom.xml
@@ -12,6 +12,7 @@
         <module>mingrui-shop-commoms</module>
         <module>mingrui-shop-service</module>
         <module>mingrui-shop-service-api</module>
+        <module>mingrui-shop-service-api-search</module>
     </modules>
 
     <!--父级项目不需要打包所有packging的类型为pom-->
@@ -31,7 +32,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.3.1.RELEASE</version>
         <!--始终从仓库中获取，不从本地路径获取-->
         <relativePath />
     </parent>
@@ -83,6 +84,12 @@
                 <type>pom</type>
                 <!--解决maven单继承的问题-->
                 <scope>import</scope>
+            </dependency>
+
+            <!--2.3版本之后web删除了验证插件-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
             </dependency>
 
         </dependencies>
