--- a/mingrui-shop-parent/mingrui-shop-commoms/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-commoms/pom.xml
@@ -15,6 +15,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>mingrui-shop-common-core</module>
+        <module>mingrui-shop-common-oauth</module>
+        <module>mingrui-shop-common-oauth</module>
     </modules>
 
 
