--- a/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-search1/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service-api/mingrui-shop-service-api-search1/pom.xml
@@ -16,6 +16,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>baidu</groupId>
+            <artifactId>mingrui-shop-service-api-xxx</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>baidu</groupId>
+            <artifactId>mingrui-shop-service-api-xxx</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
