--- a/mingrui-shop-parent/mingrui-shop-service-api/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service-api/pom.xml
@@ -16,6 +16,10 @@
     <modules>
         <module>mingrui-shop-service-api-xxx</module>
         <module>mingrui-shop-service-api-search1</module>
+        <module>mingrui-shop-service-api-template</module>
+        <module>mingrui-shop-service-api-template</module>
+        <module>mingrui-shop-service-api-template</module>
+        <module>mingrui-shop-service-api-user</module>
     </modules>
 
     <dependencies>
@@ -60,10 +64,12 @@
         </dependency>
 
 <!--        &lt;!&ndash;2.3版本之后web删除了验证插件&ndash;&gt;-->
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-validation</artifactId>-->
 <!--        </dependency>-->
+
         <!--feign get请求需要使用@SpringQueryMap注解-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
