--- a/mingrui-shop-parent/mingrui-shop-service/mingrui-shop-service-search/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service/mingrui-shop-service-search/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>mingrui-shop-service-api-search1</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>baidu</groupId>
+            <artifactId>mingrui-shop-service-api-template</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
