--- a/mingrui-shop-parent/mingrui-shop-service/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>mingrui-shop-service-xxx</module>
         <module>mingrui-shop-service-search</module>
+        <module>mingrui-shop-service-template</module>
+        <module>mingrui-shop-service-user</module>
     </modules>
 
     <dependencies>
@@ -55,6 +57,12 @@
             <groupId>baidu</groupId>
             <artifactId>mingrui-shop-service-api-xxx</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
     </dependencies>
